ARM: dts: bcm2166x-common: Add PMU BSC
Add the PMU BSC, used to connect to the PMIC on BCM21664/BCM23550
devices, and the clocks it uses.

Signed-off-by: Artur Weber <aweber.kernel@gmail.com>

--- a/arch/arm/boot/dts/broadcom/bcm21664.dtsi
+++ b/arch/arm/boot/dts/broadcom/bcm21664.dtsi
@@ -64,6 +64,10 @@
 	compatible = "brcm,bcm21664-gpio", "brcm,kona-gpio";
 };
 
+&pmu_bsc {
+	compatible = "brcm,bcm21664-i2c", "brcm,kona-i2c";
+};
+
 &smc {
 	compatible = "brcm,bcm21664-smc", "brcm,kona-smc";
 };
