--- a/arch/arm/boot/dts/broadcom/bcm2166x-common.dtsi
+++ b/arch/arm/boot/dts/broadcom/bcm2166x-common.dtsi
@@ -57,6 +57,16 @@
 			interrupts = <GIC_SPI 7 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&aon_ccu BCM21664_AON_CCU_HUB_TIMER>;
 		};
+
+		pmu_bsc: i2c@100d000 {
+			/* Compatible filled by SoC DTSI */
+			reg = <0x0100d000 0xfff>;
+			interrupts = <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			clocks = <&aon_ccu BCM21664_AON_CCU_PMU_BSC>;
+			status = "disabled";
+		};
 	};
 
 	/* Slaves bus */
@@ -229,6 +239,12 @@
 			clock-frequency = <13000000>;
 		};
 
+		pmu_bsc_var_clk: pmu_bsc_var {
+			#clock-cells = <0>;
+			compatible = "fixed-clock";
+			clock-frequency = <13000000>;
+		};
+
 		dft_19_5m_clk: dft_19_5m {
 			#clock-cells = <0>;
 			compatible = "fixed-clock";
@@ -301,7 +317,9 @@
 			reg = <0x35002000 0x0f00>;
 			#clock-cells = <1>;
 			clock-output-names = "hub_timer",
-					     "hub_timer_apb";
+					     "hub_timer_apb",
+					     "pmu_bsc",
+					     "pmu_bsc_apb";
 		};
 
 		slave_ccu: slave_ccu@3e011000 {
