dt-bindings: usb: dwc2: Add compatible for Broadcom Kona HSOTG
Add a compatible for the HSOTG controller used on Broadcom Kona series
chips. The driver was already used by this platform, but did not have
a separate compatible; add one to allow for setting hardware parameters.

Signed-off-by: Artur Weber <aweber.kernel@gmail.com>

--- a/Documentation/devicetree/bindings/usb/dwc2.yaml
+++ b/Documentation/devicetree/bindings/usb/dwc2.yaml
@@ -17,6 +17,7 @@ properties:
   compatible:
     oneOf:
       - const: brcm,bcm2835-usb
+      - const: brcm,kona-hsotg
       - const: hisilicon,hi6220-usb
       - const: ingenic,jz4775-otg
       - const: ingenic,jz4780-otg
