ARM: dts: bcm2166x-common: Add more USB clocks
Add newly-added USB clocks to the DTS.

Signed-off-by: Artur Weber <aweber.kernel@gmail.com>

--- a/arch/arm/boot/dts/broadcom/bcm2166x-common.dtsi
+++ b/arch/arm/boot/dts/broadcom/bcm2166x-common.dtsi
@@ -352,6 +352,11 @@
 					     "sdio2_sleep",
 					     "sdio3_sleep",
 					     "sdio4_sleep",
+					     "usb_ic_ahb",
+					     "usb_ic",
+					     "usbh_ahb",
+					     "usbh_48m",
+					     "usbh_12m",
 					     "usb_otg_ahb";
 		};
 	};
