dt-bindings: mfd: syscon: Add bindings for Broadcom Kona chipreg
The CHIPREG is a region containing various settings for the chip.
Add a simple syscon compatible for it, so that it can be exposed
in DT.

--- a/Documentation/devicetree/bindings/mfd/syscon.yaml
+++ b/Documentation/devicetree/bindings/mfd/syscon.yaml
@@ -46,6 +46,7 @@ properties:
               - apm,xgene-rb
               - apm,xgene-scu
               - brcm,cru-clkset
+              - brcm,kona-chipreg
               - brcm,sr-cdru
               - brcm,sr-mhb
               - freecom,fsg-cs2-system-controller
