ARM: dts: samsung-baffinlite: pull sd card pins up, not down
Fixes SD card.

--- a/arch/arm/boot/dts/broadcom/bcm23550-samsung-baffinlite.dts
+++ b/arch/arm/boot/dts/broadcom/bcm23550-samsung-baffinlite.dts
@@ -374,7 +374,7 @@
 &pinctrl {
 	sd_pins: sd-pins {
 		pins = "sdcmd", "sddat0", "sddat1", "sddat2", "sddat3";
-		bias-pull-down;
+		bias-pull-up;
 	};
 
 	mmc1_pins: mmc1-pins {
