dt-bindings: clock: brcm,kona-ccu: Add BCM21664 PMU_BSC clocks
Add clock output names for pmu_bsc and pmu_bsc_apb clocks, used for the
PMU BSC which holds the PMIC on BCM21664/BCM23550 devices.

Signed-off-by: Artur Weber <aweber.kernel@gmail.com>

--- a/Documentation/devicetree/bindings/clock/brcm,kona-ccu.yaml
+++ b/Documentation/devicetree/bindings/clock/brcm,kona-ccu.yaml
@@ -127,6 +127,8 @@ allOf:
           items:
             - const: hub_timer
             - const: hub_timer_apb
+            - const: pmu_bsc
+            - const: pmu_bsc_apb
   - if:
       properties:
         compatible:
