--- a/Documentation/devicetree/bindings/arm/bcm/brcm,bcm23550.yaml
+++ b/Documentation/devicetree/bindings/arm/bcm/brcm,bcm23550.yaml
@@ -16,6 +16,7 @@ properties:
     items:
       - enum:
           - brcm,bcm23550-sparrow
+          - samsung,baffinlite
       - const: brcm,bcm23550
 
 additionalProperties: true
