(WIP) ARM: dts: broadcom: Add DTS for Samsung Galaxy Trend Plus/S Duos 2
The Samsung Galaxy Trend Plus and the Samsung Galaxy S Duos 2 are smartphones
released in 2013 using the BCM21664 chipset.

Add common DTSI for kyleproXX boards and separate DTS files for kylepro and
kyleprods.

Signed-off-by: Artur Weber <aweber.kernel@gmail.com>

--- a/arch/arm/boot/dts/broadcom/Makefile
+++ b/arch/arm/boot/dts/broadcom/Makefile
@@ -108,6 +108,8 @@ dtb-$(CONFIG_ARCH_BCM_HR2) += \
 dtb-$(CONFIG_ARCH_BCM_MOBILE) += \
 	bcm28155-ap.dtb \
 	bcm21664-garnet.dtb \
+	bcm21664-samsung-kylepro.dtb \
+	bcm21664-samsung-kyleprods.dtb \
 	bcm23550-samsung-baffinlite.dtb \
 	bcm23550-sparrow.dtb
 dtb-$(CONFIG_ARCH_BCM_NSP) += \
