dt-bindings: arm: bcm21664: Add samsung,kylepro(ds) board compatible
Add board compatible for Samsung Galaxy Trend Plus (kylepro) and Samsung
Galaxy S Duos 2 (kyleprods) smartphones.

Signed-off-by: Artur Weber <aweber.kernel@gmail.com>

--- a/Documentation/devicetree/bindings/arm/bcm/brcm,bcm21664.yaml
+++ b/Documentation/devicetree/bindings/arm/bcm/brcm,bcm21664.yaml
@@ -16,6 +16,8 @@ properties:
     items:
       - enum:
           - brcm,bcm21664-garnet
+          - samsung,kylepro
+          - samsung,kyleprods
       - const: brcm,bcm21664
 
 additionalProperties: true
