--- a/arch/arm/boot/dts/broadcom/bcm23550-samsung-baffinlite.dts
+++ b/arch/arm/boot/dts/broadcom/bcm23550-samsung-baffinlite.dts
@@ -405,6 +405,7 @@
 &sdio2 {
 	max-frequency = <52000000>;
 
+	keep-power-in-suspend;
 	non-removable;
 	bus-width = <8>;
 
@@ -426,6 +427,9 @@
 
 	pinctrl-0 = <&mmc1_width4_pins>;
 	pinctrl-names = "default";
+
+	keep-power-in-suspend;
+	non-removable;
 
 	status = "okay";
 
